# hn-projet-x-bsky

./: .gitignore  README.md  bsky_scrap.ipynb  clean.ipynb  explo.ipynb  pyproject.toml  schema.sql  x_clean.ipynb
data/: bsky_post.parquet  bsky_user.parquet
data/temp/: political_mentions_with_sentiment.parquet  political_mentions_with_sentiment_and_topics.parquet  political_mentions_with_text.parquet
