[project]
name = "exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.59",
    "bertopic>=0.17.0",
    "httpcore>=1.0.7",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "matplotlib-inline>=0.1.7",
    "nbformat>=5.10.4",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "vadersentiment-fr>=1.3.4",
]
